# maturin-burn-test

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yaml
python/maturin_burn_test/: __init__.py  cli.py
src/: lib.rs
