[package]
name = "maturin-burn-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maturin_burn_test"
crate-type = ["cdylib"]

[dependencies]
burn = { version = "0.13.2", features = ["wgpu", "ndarray"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.21.0"
pyo3 = "0.21.0"
